# delimited-effects

./: .dockerignore  .gitignore  .hindent.yaml  .travis.yml  Makefile  README.md  deploy.sh  main.tex
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile-build  Dockerfile-deps
formalization/: Name.v  Subrow.v  Syntax.v  Tactics.v  definitions.v  examples.v  helpers.v  judgments.v  semantics.v  subsumption.v  subtyping.v  syntax.v  typing.v  typingRules.v
implementation/: LICENSE  README.md  implementation.cabal  package.yaml  stack.yaml
implementation/app/: Main.hs
implementation/examples/: bools.g  church-lists.g  church.g  handle  native-lists.g  simple-annotation  test.g
implementation/src/: Context.hs  Error.hs  Evaluation.hs  FSyntax.hs  Inference.hs  Lexer.x  Lib.hs  Parser.y  Row.hs  Subrow.hs  Substitution.hs  Subtype.hs  Syntax.hs
implementation/test/: ContextSpec.hs  ErrorSpec.hs  EvaluationSpec.hs  FSyntaxSpec.hs  InferenceSpec.hs  LexerSpec.hs  LibSpec.hs  ParserSpec.hs  RowSpec.hs  Spec.hs  SubrowSpec.hs  SubstitutionSpec.hs  SubtypeSpec.hs  SyntaxSpec.hs  Types.hs
paper/: abstract.tex  acknowledgements.tex  calculus.tex  entanglement.tex  intro.tex  macros.tex  main.tex  overview.tex  references.bib  reflection.tex
scripts/: Dockerfile  deploy.rb  deploy.sh  lint-tex.rb  post-artifact-link.rb  post-paper-link.rb  travis-deploy.sh  upload-paper.sh
