name:                implementation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stepchowfun/implementation#readme
license:             BSD3
license-file:        LICENSE
author:              Stephan Boyer and Esther Wang
maintainer:          stephan@stephanboyer.com and esther.wang47@gmail.com
copyright:           (c) 2017 Stephan Boyer and Esther Wang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Row
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable implementation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , implementation
  default-language:    Haskell2010

test-suite implementation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  other-modules:       RowSpec
  build-depends:       base
                     , implementation
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , Stream
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stepchowfun/implementation
